force-app/main/default/objects/b3o__Invoice_Configuration__c/b3o__Invoice_Configuration__c.object-meta.xml
<CustomObject>
    <label>Invoice Configuration</label>
    <nameField>
        <label>Invoice Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>