force-app/main/default/objects/b3o__Invoice_Configuration__c/fields/b3o__Maximum_Invoice_Lines__c.field-meta.xml
<CustomField>
    <fullName>b3o__Maximum_Invoice_Lines__c</fullName>
    <inlineHelpText>A Maximum Invoice Lines per Invoice before the tool splits the invoice</inlineHelpText>
    <label>Maximum Invoice Lines</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>