force-app/main/default/objects/b3o__Invoice_Configuration__c/fields/b3o__Splitting_Keys__c.field-meta.xml
<CustomField>
    <fullName>b3o__Splitting_Keys__c</fullName>
    <label>Splitting Keys</label>
    <summaryFilterItems>
        <field>b3o__Invoice_Configuration_Key__c.b3o__Type__c</field>
        <operation>equals</operation>
        <value>Split</value>
    </summaryFilterItems>
    <summaryForeignKey>b3o__Invoice_Configuration_Key__c.b3o__Invoice_Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>